<resources>
    <string name="app_name">LED Scroller - Text LED Banner</string>
    <string name="next">Next</string>
    <string name="letsstart">Start</string>
    <string name="title1">LED Banner</string>
    <string name="sub1">Easily create text with stylish \ncolor on the LED banner</string>
    <string name="sub2">Adjust text with many \nfonts  styles</string>
    <string name="sub3">Outstanding display with \nvarious themes</string>
    <string name="select_language">Select Language</string>
    <string name="Done">Done</string>
    <string name="led_banner">LED Banner</string>
    <string name="create_new">Create New</string>
    <string name="themes">Themes</string>
    <string name="saved_banner">Saved Banner</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="rate_us">Rate  Review</string>
    <string name="share_app">Share App</string>
    <string name="themes_">Themes</string>
    <string name="Save">Save</string>
    <string name="entertext">Enter Text</string>
    <string name="Blink">Blink</string>
    <string name="TextSpeed">Text Speed</string>
    <string name="TextSize">Text Size</string>
    <string name="Transition">Transition</string>
    <string name="_1x">1X</string>
    <string name="_2x">2X</string>
    <string name="_3x">3X</string>
    <string name="_4x">4X</string>
    <string name="_5x">5X</string>
    <string name="None">None</string>
    <string name="Left">Left</string>
    <string name="Right">Right</string>
    <string name="TextFont">Text Font</string>
    <string name="TextColor">Text Color</string>
    <string name="BGColor">BG Color</string>
    <string name="settings_not_supported_message">Some settings are not supported by your device</string>
    <string name="general_recording_error_message">HBRecorderOnError - See Log</string>
    <string name="max_file_reached">File size max has been reached.</string>
    <string name="max_file_size_reached_message">The file reached the designated max size</string>
    <string name="stop_recording_notification_message">Drag down to stop the recording</string>
    <string name="stop_recording_notification_title">Recording your screen</string>
    <string name="preview">Preview</string>
    <string name="history">History</string>
    <string name="see_all">See All</string>
    <string name="view_history">View History</string>
    <string name="birthday_banner">Birthday Banner</string>
    <string name="christmas_banner">Christmas banner</string>
    <string name="happy_new_year">Happy New Year</string>
    <string name="love">Love</string>
    <string name="happy_anniversary">Happy Anniversary</string>
    <string name="please_wait">Please Wait....</string>
</resources>