<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/allbg" />

    <RelativeLayout
        android:id="@+id/toolbar_language"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_20sdp"
            android:fontFamily="@font/productsansregular"
            android:gravity="center_vertical"
            android:text="@string/led_banner"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/settings"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/_20sdp"
            android:src="@drawable/setting" />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar_language"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_95sdp"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/btncreate"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:background="@drawable/rect"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/img_avatar"
                        android:layout_width="@dimen/_35sdp"
                        android:layout_height="@dimen/_35sdp"
                        android:src="@drawable/create" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:fontFamily="@font/productsansregular"
                        android:text="@string/create_new"
                        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                        android:textColor="@color/white" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btntheme"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:background="@drawable/rect"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/_35sdp"
                        android:layout_height="@dimen/_35sdp"
                        android:src="@drawable/theme" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:fontFamily="@font/productsansregular"
                        android:text="@string/themes"
                        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                        android:textColor="@color/white" />
                </LinearLayout>
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/card123"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@color/white"
                android:focusableInTouchMode="true">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/fram_fbnative"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone" />

                <com.google.android.ads.nativetemplates.TemplateView
                    android:id="@+id/my_template"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:gnt_template_type="@layout/custom_native_small_new" />

                <com.facebook.shimmer.ShimmerFrameLayout
                    android:id="@+id/shimmer_view_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/cta"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_45sdp"
                            android:layout_margin="@dimen/_5sdp"
                            android:background="@drawable/bg_ads1"
                            android:gravity="center"
                            android:paddingLeft="@dimen/_5sdp"
                            android:paddingRight="@dimen/_5sdp"
                            android:textColor="@color/black" />

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:id="@+id/background"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingBottom="@dimen/_5sdp">

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginStart="@dimen/gnt_default_margin"
                                android:layout_marginEnd="@dimen/gnt_default_margin"
                                android:layout_marginBottom="@dimen/gnt_default_margin"
                                android:orientation="horizontal">

                                <RelativeLayout
                                    android:id="@+id/relStart"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content">

                                    <ImageView
                                        android:id="@+id/icon"
                                        android:layout_width="@dimen/_35sdp"
                                        android:layout_height="@dimen/_35sdp"
                                        android:src="@color/gnt_gray" />

                                    <TextView
                                        android:layout_width="22dp"
                                        android:layout_height="wrap_content"
                                        android:layout_below="@+id/icon"
                                        android:layout_marginStart="@dimen/_5sdp"
                                        android:layout_marginTop="@dimen/_2sdp"
                                        android:gravity="center"
                                        android:lines="1"
                                        android:text="AD"
                                        android:textColor="@color/gnt_gray"
                                        android:textSize="@dimen/_8ssp" />

                                </RelativeLayout>

                                <LinearLayout
                                    android:id="@+id/content"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginEnd="@dimen/gnt_default_margin"
                                    android:layout_toEndOf="@+id/relStart"
                                    android:orientation="vertical">

                                    <LinearLayout
                                        android:id="@+id/headline"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:orientation="vertical">

                                        <LinearLayout
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:background="#8A8888"
                                            android:layout_marginStart="@dimen/_4sdp"
                                            android:orientation="horizontal">

                                            <TextView
                                                android:id="@+id/primary"
                                                android:layout_width="wrap_content"
                                                android:layout_height="20dp"
                                                android:layout_marginStart="@dimen/_5sdp"
                                                android:lines="1"
                                                android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                                                android:textColor="@color/black" />

                                        </LinearLayout>

                                        <TextView
                                            android:id="@+id/body"
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:layout_marginStart="@dimen/_5sdp"
                                            android:layout_marginTop="@dimen/_2sdp"
                                            android:background="#8A8888"

                                            android:layout_marginEnd="@dimen/gnt_no_margin"
                                            android:layout_marginBottom="3dp"
                                            android:maxLines="2"
                                            android:textAppearance="@style/TextAppearance.Material3.BodySmall"
                                            android:textColor="@color/gnt_gray" />

                                        <androidx.appcompat.widget.LinearLayoutCompat
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:layout_marginStart="@dimen/_5sdp"
                                            android:orientation="horizontal"
                                            android:visibility="gone">

                                            <TextView
                                                android:id="@+id/rtvRating"
                                                android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:layout_marginStart="@dimen/_5sdp"
                                                android:layout_marginTop="@dimen/_2sdp"
                                                android:layout_marginEnd="@dimen/gnt_no_margin"
                                                android:layout_marginBottom="3dp"
                                                android:maxLines="1"
                                                android:textAppearance="@style/TextAppearance.Material3.TitleSmall"
                                                android:textColor="@color/gnt_gray" />

                                            <RatingBar
                                                android:id="@+id/rating_bar"
                                                style="@style/gnt_RatingBar"
                                                android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:layout_gravity="center"
                                                android:layout_marginStart="@dimen/_3sdp"
                                                android:layout_marginTop="@dimen/_1sdp"
                                                android:isIndicator="true"
                                                android:lines="1"
                                                android:numStars="5"
                                                android:progressTint="@color/black"
                                                android:stepSize="0.1" />

                                            <TextView
                                                android:id="@+id/secondary"
                                                android:layout_width="wrap_content"
                                                android:layout_height="match_parent"
                                                android:layout_marginStart="@dimen/_5sdp"
                                                android:layout_marginTop="@dimen/gnt_no_margin"
                                                android:layout_marginEnd="@dimen/gnt_no_margin"
                                                android:layout_marginBottom="@dimen/gnt_no_margin"
                                                android:gravity="center"
                                                android:lines="1"
                                                android:textAppearance="@style/TextAppearance.Material3.TitleSmall"
                                                android:textColor="@color/gnt_gray" />

                                        </androidx.appcompat.widget.LinearLayoutCompat>

                                    </LinearLayout>

                                </LinearLayout>

                            </RelativeLayout>

                        </androidx.constraintlayout.widget.ConstraintLayout>


                    </androidx.appcompat.widget.LinearLayoutCompat>

                </com.facebook.shimmer.ShimmerFrameLayout>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/productsansregular"
                    android:gravity="center_vertical"
                    android:text="@string/saved_banner"
                    android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                    android:textColor="#B6B6B6" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/banner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:orientation="vertical"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:spanCount="3" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/productsansregular"
                    android:gravity="center_vertical"
                    android:text="@string/history"
                    android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                    android:textColor="#B6B6B6" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/history"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:orientation="vertical"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:spanCount="3" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>